# advent-of-code-rust

./: .gitignore  Cargo.toml  README.md  addDayFromTemplate.sh
input/2024/03/: test_inputs_part1.txt
input/2024/05/: test_inputs_part2.txt
input/2024/06/: test_inputs_part1.txt
input/2024/09/: test_inputs_part2.txt
input/2024/16/: test_inputs_part2.txt
input/2024/23/: test_inputs_part2.txt
src/: aoc.rs  lib.rs  year2016.rs  year2023.rs  year2024.rs
src/lib/: grid_utils.rs  parser_commons.rs
src/year2016/day10/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2016/day11/lib/: mod.rs  parser.rs  part1.rs
src/year2016/day12/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2016/day13/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2023/day16/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day01/: parser.rs
src/year2024/day01/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day02/: parser.rs
src/year2024/day02/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day03/: parser.rs
src/year2024/day03/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day04/: parser.rs
src/year2024/day04/lib/: mod.rs  part1.rs  part2.rs
src/year2024/day05/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day06/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day07/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day08/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day09/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day10/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day11/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day12/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day13/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day14/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day15/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day16/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day17/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day18/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day19/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day20/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day21/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day22/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day23/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day24/lib/: mod.rs  parser.rs  part1.rs  part2.rs
src/year2024/day25/lib/: mod.rs  parser.rs  part1.rs
template/: mod.rs.template  parser.rs.template  part.rs.template
