[package]
name = "adv-code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"
nom = "7.1.3"
grid = "0.15.0"
memoize = "0.4.2"
pathfinding = "4.13.0"
rounded-div = "0.1.2"

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"
log = "0.4.22"
strum_macros = "0.26.4"
strum = "0.26.3"
tabled = "0.17.0"
rayon = "1.10.0"
clap = { version = "4.5.26", features = ["derive"] }
memory-stats = "1.2.0"
prettytable = "0.10.0"
once_cell = "1.20.2"
downcast-rs = "2.0.1"
ctor = "0.2.9"

[[bin]]
name = "aoc"
path = "src/aoc.rs"

[[bin]]
name = "2024-day01-part1"
path = "src/year2024/day01/bin/part1.rs"

[[bin]]
name = "2024-day01-part2"
path = "src/year2024/day01/bin/part2.rs"

[[bin]]
name = "2024-day02-part1"
path = "src/year2024/day02/bin/part1.rs"

[[bin]]
name = "2024-day02-part2"
path = "src/year2024/day02/bin/part2.rs"

[[bin]]
name = "2024-day03-part1"
path = "src/year2024/day03/bin/part1.rs"

[[bin]]
name = "2024-day03-part2"
path = "src/year2024/day03/bin/part2.rs"

[[bin]]
name = "2024-day04-part1"
path = "src/year2024/day04/bin/part1.rs"

[[bin]]
name = "2024-day04-part2"
path = "src/year2024/day04/bin/part2.rs"

[[bin]]
name = "2024-day05-part1"
path = "src/year2024/day05/bin/part1.rs"

[[bin]]
name = "2024-day05-part2"
path = "src/year2024/day05/bin/part2.rs"

[[bin]]
name = "2024-day06-part1"
path = "src/year2024/day06/bin/part1.rs"

[[bin]]
name = "2024-day06-part2"
path = "src/year2024/day06/bin/part2.rs"

[[bin]]
name = "2024-day07-part1"
path = "src/year2024/day07/bin/part1.rs"

[[bin]]
name = "2024-day07-part2"
path = "src/year2024/day07/bin/part2.rs"

[[bin]]
name = "2024-day08-part1"
path = "src/year2024/day08/bin/part1.rs"

[[bin]]
name = "2024-day08-part2"
path = "src/year2024/day08/bin/part2.rs"

[[bin]]
name = "2024-day09-part1"
path = "src/year2024/day09/bin/part1.rs"

[[bin]]
name = "2024-day09-part2"
path = "src/year2024/day09/bin/part2.rs"

[[bin]]
name = "2024-day10-part1"
path = "src/year2024/day10/bin/part1.rs"

[[bin]]
name = "2024-day10-part2"
path = "src/year2024/day10/bin/part2.rs"

[[bin]]
name = "2024-day11-part1"
path = "src/year2024/day11/bin/part1.rs"

[[bin]]
name = "2024-day11-part2"
path = "src/year2024/day11/bin/part2.rs"

[[bin]]
name = "2024-day12-part1"
path = "src/year2024/day12/bin/part1.rs"

[[bin]]
name = "2024-day12-part2"
path = "src/year2024/day12/bin/part2.rs"

[[bin]]
name = "2024-day13-part1"
path = "src/year2024/day13/bin/part1.rs"

[[bin]]
name = "2024-day13-part2"
path = "src/year2024/day13/bin/part2.rs"

[[bin]]
name = "2024-day14-part1"
path = "src/year2024/day14/bin/part1.rs"

[[bin]]
name = "2024-day14-part2"
path = "src/year2024/day14/bin/part2.rs"

[[bin]]
name = "2024-day15-part1"
path = "src/year2024/day15/bin/part1.rs"

[[bin]]
name = "2024-day15-part2"
path = "src/year2024/day15/bin/part2.rs"

[[bin]]
name = "2024-day16-part1"
path = "src/year2024/day16/bin/part1.rs"

[[bin]]
name = "2024-day16-part2"
path = "src/year2024/day16/bin/part2.rs"

[[bin]]
name = "2024-day17-part1"
path = "src/year2024/day17/bin/part1.rs"

[[bin]]
name = "2024-day17-part2"
path = "src/year2024/day17/bin/part2.rs"

[[bin]]
name = "2024-day18-part1"
path = "src/year2024/day18/bin/part1.rs"

[[bin]]
name = "2024-day18-part2"
path = "src/year2024/day18/bin/part2.rs"

[[bin]]
name = "2024-day19-part1"
path = "src/year2024/day19/bin/part1.rs"

[[bin]]
name = "2024-day19-part2"
path = "src/year2024/day19/bin/part2.rs"

[[bin]]
name = "2024-day20-part1"
path = "src/year2024/day20/bin/part1.rs"

[[bin]]
name = "2024-day20-part2"
path = "src/year2024/day20/bin/part2.rs"